# tar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
include/tar/: io.hpp  types.hpp  ustar.hpp
include/tar/detail/: marshal.hpp  streambuf.hpp  string.hpp
src/: io.cpp  marshal.cpp  ustar.cpp
tests/: CMakeLists.txt  example-simple.cpp  marshal.cpp  streambuf.cpp  string.cpp  ustar.cpp
tests/data/: Christoph Waltz  Django Unchained.tar  Jamie Foxx  Leonardo DiCaprio  Quentin Tarantino  Quentin Tarantino.tar  README.md  Samuel Jackson
